sort.baseball.InsertBaseball.scala.error
Compilation error:
InsertBaseball:111: error: '=' expected but ',' found.
def indexToBP(index:Int) : Int,Int ={
                              ^InsertBaseball:116: error: illegal start of simple expression
	def getPlayerColor(pos:Int):Int = getPlayerColor(pos / getPositionsAmount(), pos % getPositionsAmount());
^